# flights-tracker

./: .gitignore  .gitmessage  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
config/: local.env  template.env
config_loader/: config_loader.py
email_sender/service/: email_sender.py
flights-tracker/config/: local.env
flights-tracker/email_sender/service/: email_sender.py
flights-tracker/flights_tracker/: routes.py  tracker.py
flights-tracker/flights_tracker/services/: weekend_flights_service.py
flights-tracker/flights_tracker/templates/: email_report.html
flights-tracker/flights_tracker/utils/error_handling/: exceptions.py
flights-tracker/tests/: utils.py
flights-tracker/tests/data/: example_azair_single_weekend_flight.html
flights_tracker/: flights_tracker.py  main.py  routes.py  static.py  tracker.py
flights_tracker/azair_tracker/: tracker.py
flights_tracker/azair_tracker/services/: weekend_flights_service.py
flights_tracker/email_sender/: email_sender.py
flights_tracker/models/: weekend_flights.py
flights_tracker/routes/: routes.py
flights_tracker/services/: weekend_flights_service.py
flights_tracker/utils/error_handling/: error_handler.py  exceptions.py
tests/: conftest.py  test_weekend_flights_service.py  utils.py
tests/data/: example_azair_single_flight.html  rendered_email_message_for_one_flight.html
